--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -6,7 +6,11 @@
   },
   "option": {
     "home": "Inicio",
-    "inventory": "Inventario"
+    "inventory": "Inventario",
+    "sales": "Ventas",
+    "suppliers": "Proveedores",
+    "reservation": "Reservaciones",
+    "reports": "Reportes"
   },
   "items": {
     "title": "Gestión de Platos Terminados / Ítems",
